# diarsaba

./: .env  .env.example  .gitignore  Cargo.toml  DIAGRAMA.md  README.md  ciclidb_produccion.db  index.html  main1 copy.rs  main1.rs  tempdb.redb
docs/: arq.txt  diagrama-arquitectura.md  diagrama_arquitectura.mmd  protocolo-binario.md
examples/: cliente_mutacion_test.rs  cliente_sign_test.rs  cliente_test.rs
src/: api.rs  core.rs  db_handler.rs  lib.rs  main.rs  net_handler.rs  opcodes.rs  protocol.rs  server.rs  types.rs
