[package]
name = "diarsaba"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
redb = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }


# Ouroboros (Toma la rama principal por defecto)
ouroboros_db = { git = "https://github.com/DiegoSandival/ouroboros" }

# Synap2p (Apunta específicamente a 'onlyquic')
synap2p = { git = "https://github.com/DiegoSandival/synap2p", branch = "onlyquic" }
axum-extra = "0.12.5"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
